--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2334,7 +2334,7 @@ h6 .badge {
   left: 0;
   width: 100%;
   height: 115px;
-  background-color: #ff9650;
+  background-color: #9ce0ff;
   z-index: -1;
 }
 
@@ -3602,6 +3602,11 @@ body.sidebar-mini .main-sidebar .sidebar-menu>li.active>a {
   box-shadow: 0 4px 8px #acb5f6;
   background-color: #ff9650;
   color: #fff;
+  text-align: center;
+}
+
+body.sidebar-mini .main-sidebar .sidebar-menu>li>a i {
+  padding-left: 16px;
 }
 
 body.sidebar-mini .main-sidebar .sidebar-menu>li ul.dropdown-menu {
@@ -3640,7 +3645,9 @@ body.sidebar-mini .main-sidebar .sidebar-menu>li ul.dropdown-menu li a.has-dropd
 }
 
 body.sidebar-mini .main-sidebar .sidebar-menu li:hover>ul.dropdown-menu {
-  display: block !important;
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
 }
 
 body.sidebar-mini .main-sidebar .sidebar-menu li:hover>ul.dropdown-menu li:hover>a {
@@ -4078,7 +4085,6 @@ body:not(.sidebar-mini) .sidebar-style-1 .sidebar-menu li.active ul.dropdown-men
 }
 
 body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu>li.active>a {
-  padding-left: 16px;
   background-color: transparent;
   position: relative;
 }
