--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -64,7 +64,7 @@
 }
 
 a {
-  color: #9ce0ff;
+  color: #ffa426;
   font-weight: 500;
   transition: all .5s;
   -webkit-transition: all .5s;
@@ -1545,7 +1545,7 @@ table tr:hover .table-links {
 
 /* 3.10 Pagination */
 .page-item .page-link {
-  color: #0573a7;
+  color: #ffa426;
   border-radius: 3px;
   margin: 0 3px;
 }
@@ -3600,7 +3600,7 @@ body.sidebar-mini .main-sidebar .sidebar-menu>li>a.has-dropdown:after {
 
 body.sidebar-mini .main-sidebar .sidebar-menu>li.active>a {
   box-shadow: 0 4px 8px #acb5f6;
-  background-color: #9ce0ff;
+  background-color: #ffa426;
   color: #fff;
   text-align: center;
 }
@@ -3969,7 +3969,7 @@ body.layout-3 .main-footer {
 }
 
 .main-sidebar .sidebar-menu li.active a {
-  color: #9ce0ff;
+  color: #ffa426;
   font-weight: 600;
   background-color: #fcfcfd;
 }
@@ -4097,7 +4097,7 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu>li.active>a:before {
   transform: translateY(-50%);
   height: 25px;
   width: 4px;
-  background-color: #9ce0ff;
+  background-color: #ffa426;
 }
 
 body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-menu li a {
